# books-app-server

./: README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 72a06aa8ab72_initial.py
app/: database.py  schemas.py  seed.py
app/models/: __init__.py  book.py  issuance.py  reader.py
app/routers/: books.py  issuances.py  readers.py
